--- a/templates/logistics/logistics.html
+++ b/templates/logistics/logistics.html
@@ -1,5 +1,264 @@
 {% extends 'base.html' %}
+{% load static %}
+
+{% block head_extra %}
+<style>
+#fp-list table {
+  width: 90%;
+  overflow: auto;
+  background: rgb(255, 255, 255);
+  color: rgb(42, 110, 73);
+  border: none;
+  border-radius: 0.5em;
+  border: 0.1rem outset rgb(235, 233, 233);
+  border-collapse: separate;
+  border-spacing: 3px 1px;
+  margin: 5em 0;
+  margin-left: 5em;
+  margin-bottom: 5px;
+  margin-top: 10px;
+}
+
+#fp-list th {
+  height: 2em;
+  background-color: rgba(143, 188, 202, 0.87);
+  color: rgba(11, 6, 22, 0.658);
+  border-radius: 0.5em;
+  text-align: center;
+  justify-content: center;
+}
+
+#fp-list tr {
+  height: 3em;
+  background-color: rgb(255, 255, 255);
+  border-radius: 0.7em;
+  color: rgb(77, 96, 116);
+}
+
+#fp-list td {
+  font-size: 15px;
+  margin-left: auto;
+  min-width:130px;
+  vertical-align: middle;
+}
+
+#fp-list tbody tr:nth-child(2n + 1) {
+  background-color: rgb(245, 248, 245);
+}
+
+html {
+  background: rgb(238, 236, 236);
+}
+
+/* :root {
+  --rad: 0.7rem;
+  --dur: 0.3s;
+  --color-dark: #2f2f2f;
+  --color-light: #fff;
+  --color-brand: #ced3d8;
+  --font-fam: "Lato", sans-serif;
+  --height: 5rem;
+  --btn-width: 2rem;
+  --bez: cubic-bezier(0, 0, 0.43, 1.49);
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+} */
+
+.fp-list {
+  display: grid;
+  /* grid-template-rows: 0.5fr 1fr; */
+}
+
+.pgntn{
+  margin-left:auto;
+  margin-right: auto;
+}
+</style>
+
+<!-- CSS for filter and search -->
+<link rel="stylesheet" href="{% static 'css/site/main.css' %}">
+{% endblock %}
 
 {% block content %}
-LOGISTICS
+<a href="{% url 'facturelist' %}" class="btn btn-lg btn-warning border border-dark">See All List Of Factures</a>
+<a href="{% url 'facturecreate' %}" class="btn btn-lg btn-warning border border-dark">Create New Facture</a>
+<!-- Search -->
+<section style="padding-top: 10px;">
+  <div class="container">
+    <div class="row justify-content-center padding">
+      <div class="col-md-8 ftco-animate fadeInUp ftco-animated">
+        <form type="GET" action="" class="domain-form">
+          <div class="form-group d-md-flex">
+            <!-- Project Dropdowns -->
+            <input type="text" name="category" id="categoryinput" value="1"
+              style="visibility: hidden; width: 1px;">
+
+            <select class="custom-select my-1 mx-1 mr-sm-2 border rounded px-1 py-2" id="inlineFormCustomSelectPref" style="min-width: 100px;">
+              <option selected>
+                All
+              </option>
+              <option value="hemmesi">CRA</option>
+              <option value="saherici">CRI</option>
+              <option value="etrapobalary">CCI</option>
+              <option value="saherara">HTC</option>
+            </select>
+            <!-- Trade Dropdowns -->
+            <input type="text" name="category" id="categoryinput" value="1"
+              style="visibility: hidden; width: 1px;">
+
+            <select class="custom-select my-1 mx-1 mr-sm-2 border rounded px-1 py-2" id="inlineFormCustomSelectPref" style="min-width: 100px;">
+              <option selected>
+                All
+              </option>
+              <option value="hemmesi">CEA</option>
+              <option value="saherici">CC</option>
+              <option value="etrapobalary">MEC</option>
+              <option value="saherara">ELE</option>
+            </select>
+            <!-- Lot Dropdowns -->
+            <input type="text" name="category" id="categoryinput" value="1"
+              style="visibility: hidden; width: 1px;">
+
+            <select class="custom-select my-1 mx-1 mr-sm-2 border rounded px-1 py-2" id="inlineFormCustomSelectPref" style="min-width: 100px;">
+              <option selected>
+                All
+              </option>
+              <option value="hemmesi">02</option>
+              <option value="saherici">20</option>
+              <option value="etrapobalary">70C</option>
+              <option value="saherara">31</option>
+            </select>
+            <!-- Search box -->
+            <input id="search" name='search' type="text" class="form-control px-4 my-1  mx-1"
+              placeholder="What are you searching for...">
+            <input type="submit" class="search-domain btn btn-primary px-5 my-1  mx-1" value="Search">
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</section>
+<div class="fp-list" id="fp-list">
+
+
+  <table class="table">
+    <thead>
+      <tr class="">
+        <th scope="col">Facture</th>
+        <th scope="col">Specification</th>
+        <th scope="col">TDS</th>
+        <th scope="col">Declaration</th>
+        <th scope="col">COO</th>
+        <th scope="col">Export to</th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for facture in factures %}
+      <tr class="px-4 ">
+        <td class="">{{ facture.number }}</td>
+        
+        <td class="" style="text-align: center;">
+          <table class="m-0" style="max-width: 100%;">
+            <tbody class="removeDuplicate" id='removeFactureDuplicate'>
+              {% for fitem in facture.factureitems.all %}
+                {% for sitem in fitem.specificationfactures.all %}
+                <tr>
+                  <td>{{ sitem.specification.number }}</td>
+                </tr>
+                {% endfor %}
+              {% endfor %}
+            </tbody>
+          </table>
+        </td>
+          
+        <td class="" style="text-align: center;">
+            <table class="m-0" style="max-width: 100%;">
+              <tbody class="removeDuplicate" id='removeFactureDuplicate'>
+                {% for fitem in facture.factureitems.all %}
+                  {% for titem in fitem.tdsfactures.all %}
+                  <tr>
+                    <td>{{ titem.tds.number }}</td>
+                  </tr>
+                  {% endfor %}
+                {% endfor %}
+              </tbody>
+            </table>
+          </td>
+
+        <td class="" style="text-align: center;">
+            <table class="m-0" style="max-width: 100%;">
+              <tbody class="removeDuplicate" id='removeFactureDuplicate'>
+                {% for fitem in facture.factureitems.all %}
+                  {% for ditem in fitem.tdsfactures.all %}
+                  <tr>
+                    <td>{{ ditem.declaration.number }}</td>
+                  </tr>
+                  {% endfor %}
+                {% endfor %}
+              </tbody>
+            </table>
+          </td>
+
+          <td class="" style="text-align: center;">
+            <table class="m-0" style="max-width: 100%;">
+              <tbody class="removeDuplicate" id='removeFactureDuplicate'>
+                {% for fitem in facture.factureitems.all %}
+                  {% for cooitem in fitem.facturetocoo.all %}
+                  <tr>
+                    <td>{{ cooitem.coo.number }}</td>
+                  </tr>
+                  {% endfor %}
+                {% endfor %}
+              </tbody>
+            </table>
+          </td>
+
+        <td class="row justify-content-center" style="max-width: 100px;">
+          <a href="{% url 'export' %}?what=facture&towhat=excel&pk={{facture.id}}" class="btn btn-primary mb-1">To Excel</a>
+          <a href="/factures/{{ facture.id }}/edit/" class="btn btn-info mb-1">Edit</a>
+          <!-- <a href="{% url 'export'%}?what=facture&towhat=pdf&pk={{facture.id}}" class="btn btn-info">To PDF</a> -->
+        </td>
+      </tr>
+      {% endfor %}
+    </tbody>
+  </div>
+</table>
+<nav class="pgntn" aria-label="Pagination">
+  <ul class="pagination">
+    <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+    <li class="page-item"><a class="page-link" href="#">1</a></li>
+    <li class="page-item"><a class="page-link" href="#">Next</a></li>
+  </ul>
+</nav>
+
+{% endblock %}
+
+{% block js %}
+<script>
+
+  $(document).ready(function(){
+    var removeDuplicates = $('.removeDuplicate')
+    var uniqueArray = []
+    removeDuplicates.each( function(){
+
+        $(this).children('tr').each(function(){
+          value = $(this).children('td').html()
+          if (uniqueArray.indexOf(value)<0) {
+            uniqueArray.unshift(value)
+          } else{
+            $(this).hide()
+          }
+      });
+      uniqueArray=[]
+      }
+      );
+
+  });
+</script>
+<!-- JS for filter and search. -->
+<script src="{% static 'js/site/main.js' %}"></script>
 {% endblock %}
