--- a/templates/site/site.html
+++ b/templates/site/site.html
@@ -4,7 +4,7 @@
 {% block head_extra %}
 <style>
 #fp-list table {
-  width: 90%;
+  width: 95%;
   overflow: auto;
   background: rgb(255, 255, 255);
   color: rgb(42, 110, 73);
@@ -14,7 +14,8 @@
   border-collapse: separate;
   border-spacing: 3px 1px;
   margin: 5em 0;
-  margin-left: 5em;
+  margin-left: auto;
+  margin-right: auto;
   margin-bottom: 5px;
   margin-top: 10px;
 }
@@ -26,6 +27,7 @@
   border-radius: 0.5em;
   text-align: center;
   justify-content: center;
+  vertical-align: middle;
 }
 
 #fp-list tr {
@@ -38,7 +40,7 @@
 #fp-list td {
   font-size: 15px;
   margin-left: auto;
-  min-width:130px;
+  min-width:90px;
   vertical-align: middle;
 }
 
@@ -150,6 +152,7 @@ html {
       <tr class="">
         <th scope="col">FP Number</th>
         <th scope="col">Product Name</th>
+        <th scope="col">Lot</th>
         <th scope="col">Annexe-5</th>
         <th scope="col">Order</th>
         <th scope="col">Facture</th>
@@ -157,28 +160,126 @@ html {
         <th scope="col">TDS</th>
         <th scope="col">Declaration</th>
         <th scope="col">COO</th>
-        <th scope="col">Export to</th>
+        <th scope="col">Export</th>
       </tr>
     </thead>
     <tbody>
-      {% for fp in apidata %}
+      {% for fp in fps %}
       <tr class="px-4 ">
         <td scope="row" class="">{{ fp.number }}</td>
-        <td class="">{{ fp.product_name }}</td>
-        <td class="">LOT - {{ fp.lot }}</td>
-        <td class="">{{ fp.order_numbers }}</td>
-        <td class="">{{ fp.facture_numbers }}</td>
+        <td class="">{{ fp.product.name_fr }}</td>
+        <td class="" >{{ fp.lot.number }}</td>
+        <td class="" style="min-width: 150px; max-width: 200px;">{{ fp.annexe5 }}</td>
+
+        <!-- Orders -->
+        <td class="" style="text-align: center;">
+          <table class="m-0" style="max-width: 100%;">
+            <tbody class="removeDuplicate" id='removeFactureDuplicate'>
+              {% for oitem in fp.productcardorderitems.all %}
+                <tr>
+                  <td style="min-width: 100px;">{{ oitem.order.number }}</td>
+                </tr>
+              {% endfor %}
+            </tbody>
+          </table>
+        </td>
+
+        <!-- Factures -->
+        <td class="" style="text-align: center;">
+          <table class="m-0" style="max-width: 100%;">
+            <tbody class="removeDuplicate" id='removeFactureDuplicate'>
+              {% for oitem in fp.productcardorderitems.all %}
+                {% for fitem in oitem.factureitem_set.all %}
+                  <tr>
+                    <td style="min-width: 120px;">{{ fitem.facture.number }}</td>
+                  </tr>
+                {% endfor %}
+              {% endfor %}
+            </tbody>
+          </table>
+        </td>
+        
+        <!-- Specification -->
+        <td class="" style="text-align: center;">
+          <table class="m-0" style="max-width: 100%;">
+            <tbody class="removeDuplicate" id='removeFactureDuplicate'>
+              {% for oitem in fp.productcardorderitems.all %}
+                {% for fitem in oitem.factureitem_set.all %}
+                {% for sitem in fitem.specificationfactures.all %}
+                  <tr>
+                    <td>{{ sitem.specification.number }}</td>
+                  </tr>
+                {% endfor %}
+                {% endfor %}
+              {% endfor %}
+            </tbody>
+          </table>
+        </td>
+
+        <!-- TDS -->
+        <td class="" style="text-align: center;">
+          <table class="m-0" style="max-width: 100%;">
+            <tbody class="removeDuplicate" id='removeFactureDuplicate'>
+              {% for oitem in fp.productcardorderitems.all %}
+                {% for fitem in oitem.factureitem_set.all %}
+                {% for titem in fitem.tdsfactures.all %}
+                  <tr>
+                    <td>{{ titem.tds.number }}</td>
+                  </tr>
+                {% endfor %}
+                {% endfor %}
+              {% endfor %}
+            </tbody>
+          </table>
+        </td>
+
+        <!-- Declaration -->
+        <td class="" style="text-align: center;">
+          <table class="m-0" style="max-width: 100%;">
+            <tbody class="removeDuplicate" id='removeFactureDuplicate'>
+              {% for oitem in fp.productcardorderitems.all %}
+                {% for fitem in oitem.factureitem_set.all %}
+                {% for ditem in fitem.declarationfactures.all %}
+                  <tr>
+                    <td>{{ ditem.declaration.number }}</td>
+                  </tr>
+                {% endfor %}
+                {% endfor %}
+              {% endfor %}
+            </tbody>
+          </table>
+        </td>
+
+        <!-- Declaration -->
+        <td class="" style="text-align: center;">
+          <table class="m-0" style="max-width: 100%;">
+            <tbody class="removeDuplicate" id='removeFactureDuplicate'>
+              {% for oitem in fp.productcardorderitems.all %}
+                {% for fitem in oitem.factureitem_set.all %}
+                {% for cooitem in fitem.facturetocoo.all %}
+                  <tr>
+                    <td>{{ cooitem.coo.number }}</td>
+                  </tr>
+                {% endfor %}
+                {% endfor %}
+              {% endfor %}
+            </tbody>
+          </table>
+        </td>
+
+        <!-- <td class="">{{ fp.facture_numbers }}</td>
         <td class="">{{ fp.specification_numbers }}</td>
         <td class="">{{ fp.tds_numbers }}</td>
         <td class="">{{ fp.declaration_numbers }}</td>
-        <td class="">{{ fp.coo_numbers }}</td>
-        <td class="row justify-content-center" style="max-width: 100px;">
+        <td class="">{{ fp.coo_numbers }}</td> -->
+        <td class="row justify-content-center" style="max-width: 120px; min-width: 100px;">
           <a href="{% url 'export' %}?what=fp&towhat=excel&pk={{fp.id}}" class="btn btn-primary mb-1">To Excel</a>
           <a href="/fps/{{ fp.id }}/change/" class="btn btn-info mb-1">Edit</a>
           <!-- <a href="{% url 'export'%}?what=fp&towhat=pdf&pk={{fp.id}}" class="btn btn-info">To PDF</a> -->
         </td>
       </tr>
       {% endfor %}
+  
     </tbody>
   </div>
 </table>
@@ -193,6 +294,29 @@ html {
 {% endblock %}
 
 {% block js %}
+
+<script>
+
+  $(document).ready(function(){
+    var removeDuplicates = $('.removeDuplicate')
+    var uniqueArray = []
+    removeDuplicates.each( function(){
+
+        $(this).children('tr').each(function(){
+          value = $(this).children('td').html()
+          if (uniqueArray.indexOf(value)<0) {
+            uniqueArray.unshift(value)
+          } else{
+            $(this).hide()
+          }
+      });
+      uniqueArray=[]
+      }
+      );
+
+  });
+</script>
+
 <!-- JS for filter and search. -->
 <script src="{% static 'js/site/main.js' %}"></script>
 {% endblock %}
