some grammatical mistakes were corrected

--- a/templates/home.html
+++ b/templates/home.html
@@ -40,7 +40,7 @@
                 <img class="bd-placeholder-img card-img-top border rounded" width="100%" height="225"  src="{% static 'img/site.jpg' %}" alt="">
               <div class="card-body" style="height: 200px;">
                 <h5 class="card-title text-center">SITE TEAM</h5>
-                <p class="card-text" style="height: 60px;">You can create new Fiche Produit and track if you product was ordered, purchased and declared at custom.</p>
+                <p class="card-text" style="height: 60px;">You can create new Fiche Produit and track if your product was ordered, purchased and declared at custom.</p>
                 <div class="d-flex justify-content-around align-items-center">
                   <div class="btn-group">
                       <a  class="btn btn-sm btn-primary m-1 w-50 " style="height: 60px;" href="{% url 'site' %}">See Dashboard of Site</a>
@@ -58,7 +58,7 @@
               <img class="bd-placeholder-img card-img-top border rounded" width="100%" height="225"  src="{% static 'img/achat.jpg' %}" alt="">
               <div class="card-body" style="height: 200px;">
                 <h5 class="card-title text-center">SERVICE ACHAT</h5>
-                <p class="card-text" style="height: 60px;">You can see all orders and you can track you you purchased that order or not.</p>
+                <p class="card-text" style="height: 60px;">You can see all orders and you can track if your orders were purchased or not.</p>
                 <div class="d-flex justify-content-around align-items-center">
                   <div class="btn-group">
                     <a  class="btn btn-sm btn-primary m-1" style="height: 60px;" href="{% url 'achat' %}"">See Achat Dashboard</a>
@@ -76,7 +76,7 @@
               <img class="bd-placeholder-img card-img-top border rounded" width="100%" height="225"  src="{% static 'img/logistics.jpg' %}" alt="">
               <div class="card-body" style="height: 200px;">
                 <h5 class="card-title text-center">LOGISTICS</h5>
-                <p class="card-text" style="height: 60px;">You can see all factures and track them if necessary documents like specification, TDS and declaration.</p>
+                <p class="card-text" style="height: 60px;">You can see all factures and track if necessary documents are ready.(Specification, TDS, Declaration etc.)</p>
                 <div class="d-flex justify-content-around align-items-center">
                   <div class="btn-group">
                     <a  class="btn btn-sm btn-primary m-1" style="height: 60px;" href="{% url 'logistics' %}"">See Logistics Dashboard</a>
