--- a/templates/achat/orderlist.html
+++ b/templates/achat/orderlist.html
@@ -14,7 +14,7 @@
   border-collapse: separate;
   border-spacing: 3px 1px;
   margin: 5em 0;
-  margin-left: 5em;
+  margin-left: 2em;
   margin-bottom: 5px;
   margin-top: 10px;
 }
@@ -162,14 +162,15 @@ html {
                 <table  class="table m-0">
                     <thead>
                         <tr class="">
+                            <th scope="col" style="max-width: 50px;">Project</th>
                             <th scope="col">No:</th>
                             <th scope="col" style="min-width:300px">Product Card Reference</th>
                             <th scope="col" style="min-width:300px">Description</th>
                             <th scope="col">Annexe-5</th>
+                            <th scope="col" style="max-width:100px">Unit</th>
                             <th scope="col" style="min-width:100px">Quantity</th>
                             <th scope="col">Price</th>
                             <th scope="col">Total Price</th>
-                            <th scope="col" style="max-width:100px">Unit</th>
                             <th scope="col">Currency</th>
                             <th scope="col">Image</th>
                             <th scope="col">Action</th>
@@ -177,14 +178,15 @@ html {
                     </thead>
                     {% for orderitem in order.orderorderitems.all %}
                     <tbody>
+                        <td class="" style="max-width: 50px;">{{ orderitem.order.project.code }}</td>
                         <td class="">{{ orderitem.no }}</td>
                         <td class="">{{ orderitem.product_card.product.name_fr }}</td>
                         <td class="">{{ orderitem.desc_fr }}</td>
                         <td class="">{{ orderitem.product_card.annexe5.code }}</td>
+                        <td class="">{{ orderitem.unit }}</td>
                         <td class="">{{ orderitem.quantity }}</td>
                         <td class="">{{ orderitem.price }}</td>
-                        <td class="">--</td>
-                        <td class="">{{ orderitem.unit }}</td>
+                        <td class="">{{ orderitem.total_price }}</td>
                         <td class="">{{ orderitem.currency }}</td>
                         <td class=""><img src="{{ orderitem.product_card.product.image.url }}" style="max-width: 100px;" alt=""></td>
                         <td  class="d-flex">
